--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,4 @@
 spring.application.name=TestProject
+spring.datasource.url=jdbc:mysql://localhost:3306/my_db?useSSL=false
+spring.datasource.username=root
+spring.datasource.password=vlasnako
